css/oedious.css
.sideNav {
      width: 300px;
      position: fixed;
      z-index: 1;
      top: 0px;
      bottom: 0px;
      overflow-x: hidden;
      overflow: hidden;
      transition: 0.5s;
	  background-color: white;
    }
	
	#tableOfContents a {
		color:#777777;
	}
	
	#tableOfContents li {
		background-color:#ffffff;
		padding:.5rem;
	}
	
	#tableOfContents li.mapLink:hover {
		background-color: #ffe7e6;
	}
	
	#tableOfContents li.mapLink:focus {
		background-color: #ffc8b9;
	}
	
	#tableOfContents li.mapLink:selected {
		background-color: #ffc8b9;
	}
	
	#tableOfContents li.mapLink a {
		height: 100%;
		width: 100%;
		display: block;
	}
	
    #leftNav {
      left: 0px;
	  top: 58px;
	  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
    }
	
	@media(min-width: 601px){
	    #leftNav {
		  left: 0px;
		  top: 64px;
		  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
		}
	}

    .toggle {
      position: absolute;
      padding: 10px 5px;
      height: 36px;
    }

    #leftNav #leftToggle {
      right: 0;
    }
	
	#mapHeader {
		display: none;
	}
	
	@media(min-width: 601px){
		#mapHeader {
			display: block;
		}
	}
	
	#arrowLeft {
	  top: 70px;
	  left: 292px;
	  border-radius: 0px 30px 30px 0px;
	  background-color: #F44336;
	  position: fixed;
	  line-height: 35px;
	  width: 40px;
	  transition: 0.5s;
	}
	
	#arrowIcon {
	font-size: 1.8rem;
	text-align: center;
	color: white;
	line-height: 35px;
	width: 35px;
	left: 5px;
	display: block;
	position: relative;
	transition: 0.6s;
	}

    .bar {
      width: 40px;
      height: 6px;
      background-color: black;
      margin: 5px 0;
    }

    .panel {
      display: none;
      position: relative;
      height: 100%;
      overflow-y: scroll;
	  padding-left: 6px;
    }

    .filterInfo {
      margin: 2px 0px;
    }

    .panelInput {
      position: absolute;
      left: 60px;
      width: calc(100% - 70px);
    }

    .panelList {
      margin: 6px 0px;
    }

    .headerButton {
      width: 75px;
    }
	
	.main {
			position: absolute;
			top: 56px;
			right: 0;
			bottom: 0;
			left: 0;
			overflow: hidden;
			transition: 0.5s;
		}
	
	@media (min-width:601px) {
		.main {
		  position: absolute;
		  top: 64px;
		  right: 0;
		  bottom: 0;
		  left: 300px;
		  overflow: hidden;
		  transition: 0.5s;
		}
	}
	
	.fixed-action-btn {
		bottom: 6px;
	}
	
	@media (min-width:601px) {
		.fixed-action-btn{
			bottom:23px;
		}
	}
	
	.collapsible-body {
		padding:0;
	}
	
	::-webkit-scrollbar {
		width:8px;
		height:8px;
		background:#00000000;
	}
	
	::-webkit-scrollbar-thumb {
		background:#ee0202;
		border-radius:4px;
	}
	
	::-webkit-scrollbar-track {
		background:#00000000;
	}
	
	.dropdown-content li > a, .dropdown-content li > span {
		color:#ee0202;
	}
	
	.select-wrapper input.select-dropdown:focus {
		border-bottom: 1px solid #ee0202;
	}
	
	.select-dropdown.dropdown-content li:hover {
	  background-color: #ffe7e6;
	}

	.select-dropdown.dropdown-content li.selected {
	  background-color: #ffc8b9;
	}
	
	.select-dropdown.dropdown-content li.focus {
	  background-color: #ffc8b9;
	}
	
	body.keyboard-focused .select-dropdown.dropdown-content li:focus {
	  background-color: #ffc8b9;
	}
	
	.collapsible {
		margin-bottom: 4px;
	}
	
	@media (min-width:601px){
		.collapsible {
			margin-bottom: 1rem;
		}
	}
	
	#mapInfo {
		position:absolute; 
		bottom:4px; 
		width:300px;
		left: 4px;
	}
	
	@media (min-width:601px) {
		#mapInfo {
			position:absolute; 
			bottom:0; 
			width:300px;
			left: 4px;
			padding-bottom: 10px;
		}
	}

